minor: ipad overflow issue

--- a/styles.css
+++ b/styles.css
@@ -69,9 +69,9 @@ img {
   width: 1366px;
   max-width: 100vw;
   max-height: 100svh;
+  min-height: 100svh;
   margin: 0 auto;
   padding: 2rem;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
